--- a/app/views/furimas/index.html.erb
+++ b/app/views/furimas/index.html.erb
@@ -122,29 +122,36 @@
 
   <%# 商品一覧 %>
   <div class='item-contents'>
+
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
+    <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
         <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
-
+          <%=image_tag item.image,class: "item-img"%>
+          
           <%# 商品が売れていればsold outの表示 %>
+          <%# if  %>
+
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+           <%# else %>
+
+          <%# end%>
           <%# //商品が売れていればsold outの表示 %>
 
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "商品名" %>
+            <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= "販売価格" %>円<br>(税込み)</span>
+            <span><%= item.price %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -154,8 +161,9 @@
         <% end %>
       </li>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-
+ <% end %>
       <%# 商品がない場合のダミー %>
+
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
