--- a/app/views/furimas/index.html.erb
+++ b/app/views/furimas/index.html.erb
@@ -130,7 +130,9 @@
     <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to furima_path(item.id) do %>
+        <%# Prefixのルーティングでリンクをつなげる時は後ろにidとつなげるテーブル先も指定する%>
+        <%# 今回の様なインスタンス変数から代入してる時は代入先を指定する。%>
         <div class='item-img-content'>
           <%=image_tag item.image,class: "item-img"%>
           
