--- a/app/views/furimas/index.html.erb
+++ b/app/views/furimas/index.html.erb
@@ -137,14 +137,11 @@
           <%=image_tag item.image,class: "item-img"%>
           
           <%# 商品が売れていればsold outの表示 %>
-          <%# if  %>
-
+          <% if item.contact != nil %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-           <%# else %>
-
-          <%# end%>
+          <% end %>
           <%# //商品が売れていればsold outの表示 %>
 
         </div>
