最終の編集

--- a/app/views/furimas/index.html.erb
+++ b/app/views/furimas/index.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/header" %>
+
 <div class='main'>
 
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
@@ -18,7 +19,7 @@
     </div>
   </div>
   <%# //画面上部の「人生を変えるフリマアプリ」帯部分  %>
-
+<%# .present? .nil? .blank? .empty?%>
   <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
@@ -162,7 +163,7 @@
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
  <% end %>
       <%# 商品がない場合のダミー %>
-
+  <% if  @items.length == 0 %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
@@ -182,6 +183,7 @@
         <% end %>
       </li>
       <%# //商品がある場合は表示されないようにしましょう %>
+      <% end %>
       <%# //商品がない場合のダミー %>
     </ul>
   </div>
