コメント修正

--- a/app/views/furimas/index.html.erb
+++ b/app/views/furimas/index.html.erb
@@ -164,6 +164,7 @@
  <% end %>
       <%# 商品がない場合のダミー %>
   <% if  @items.length == 0 %>
+  <%# lengthは数値を追加することが出来る記述、表示をするしないの時には便利%>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
