--- a/app/views/furimas/show.html.erb
+++ b/app/views/furimas/show.html.erb
@@ -51,7 +51,7 @@
     <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @item.explanation %></span>
     </div>
     <table class="detail-table">
       <tbody>
